--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "svix": "^1.21.0",
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
